# mobile-use

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  appVer.json  docker-compose.yml  docker-entrypoint.sh  llm-config.defaults.jsonc  llm-config.override.template.jsonc  minitap.ps1  minitap.sh  mobile-use.ps1  pyproject.toml  requirements.txt  servers.Dockerfile  slim.Dockerfile
.github/workflows/: docker_push.yml  ruff.yml
assets/maestro/: Dockerfile
src/minitap/: config.py  constants.py  context.py  llm_config_context.py  main.py
src/minitap/agents/: handle_screenshot.py  handle_ui_hierarchy.py  handle_view_hierarchy.py  history_cleanup.py
src/minitap/agents/contextor/: contextor.py
src/minitap/agents/cortex/: cortex.md  cortex.py  types.py
src/minitap/agents/executor/: executor.md  executor.py  executor_context_cleaner.py  utils.py
src/minitap/agents/hopper/: hopper.py
src/minitap/agents/judge/: judge.md  judge.py  screenshot_based_judge.md
src/minitap/agents/memora/: memora.md  memora.py
src/minitap/agents/orchestrator/: orchestrator.md  orchestrator.py  types.py
src/minitap/agents/outputter/: outputter.py  test_outputter.py
src/minitap/agents/planner/: planner.md  planner.py  types.py  utils.py
src/minitap/clients/: adb_client.py  device_hardware_client.py  ios_client.py  screen_api_client.py
src/minitap/controllers/: mobile_command_controller.py  platform_specific_commands.py  platform_specific_commands_controller.py  test_mobile_command_controller.py
src/minitap/graph/: graph.py  state.py
src/minitap/servers/: config.py  device_hardware_bridge.py  device_screen_api.py  device_screen_server.py  start_servers.py  stop_servers.py  utils.py
src/minitap/services/: llm.py
src/minitap/tools/: complete_goal.py  end_subgoal.py  index.py  list_packages.py  maestro.py  start_subgoal.py  test.py  tool_wrapper.py  update_memory.py
src/minitap/utils/: adb.py  cli_helpers.py  cli_selection.py  conversations.py  decorators.py  logger.py  media.py  recorder.py  requests_utils.py  shell_utils.py
src/mobile_use/: config.py  constants.py  llm_config_context.py  main.py
src/mobile_use/agents/: history_cleanup.py
src/mobile_use/clients/: device_hardware_client.py  ios_client.py  screen_api_client.py
src/mobile_use/controllers/: mobile_command_controller.py  platform_specific_commands_controller.py
src/mobile_use/graph/: graph.py  state.py
src/mobile_use/servers/: config.py  device_hardware_bridge.py  device_screen_api.py  start_servers.py  stop_servers.py
src/mobile_use/services/: llm.py
src/mobile_use/tools/: index.py  tool_wrapper.py
src/mobile_use/utils/: cli_helpers.py  conversations.py  logger.py  media.py  recorder.py  requests_utils.py  shell_utils.py  ui_hierarchy.py
(+59 files in other folders)
